--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -54,6 +54,11 @@ jobs:
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
           TF_VAR_region: ${{ secrets.OCI_REGION }}
           TF_VAR_compartment_id: ${{ secrets.OCI_COMPARTMENT_ID }}
+          TF_VAR_instance_image_id: ${{ secrets.OCI_INSTANCE_IMAGE_ID }}
+          TF_VAR_ssh_public_key: ${{ secrets.OCI_SSH_PUBLIC_KEY }}
+          TF_VAR_project_name: ${{ secrets.OCI_PROJECT_NAME }}
+          TF_VAR_environment: ${{ secrets.OCI_ENVIRONMENT }}
+          TF_VAR_instance_count: ${{ secrets.OCI_INSTANCE_COUNT }}
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
@@ -64,6 +69,11 @@ jobs:
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
           TF_VAR_region: ${{ secrets.OCI_REGION }}
           TF_VAR_compartment_id: ${{ secrets.OCI_COMPARTMENT_ID }}
+          TF_VAR_instance_image_id: ${{ secrets.OCI_INSTANCE_IMAGE_ID }}
+          TF_VAR_ssh_public_key: ${{ secrets.OCI_SSH_PUBLIC_KEY }}
+          TF_VAR_project_name: ${{ secrets.OCI_PROJECT_NAME }}
+          TF_VAR_environment: ${{ secrets.OCI_ENVIRONMENT }}
+          TF_VAR_instance_count: ${{ secrets.OCI_INSTANCE_COUNT }}
         run: terraform apply -auto-approve tfplan
 
       - name: Terraform Output
