--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,4 +1,4 @@
-name: 'Terraform Apply'
+name: 'Terraform Destroy'
 
 on:
   workflow_dispatch:  # Execução manual apenas
@@ -8,10 +8,10 @@ env:
   WORKING_DIR: './terraform'
 
 jobs:
-  terraform-apply:
-    name: 'Terraform Apply'
+  terraform-destroy:
+    name: 'Terraform Destroy'
     runs-on: ubuntu-latest
-    environment: production
+    environment: production  # Requer aprovação manual
     
     steps:
       - name: Checkout
@@ -41,7 +41,7 @@ jobs:
         working-directory: ${{ env.WORKING_DIR }}
         run: terraform init
 
-      - name: Terraform Plan
+      - name: Terraform Destroy
         working-directory: ${{ env.WORKING_DIR }}
         env:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
@@ -54,35 +54,10 @@ jobs:
           TF_VAR_project_name: ${{ secrets.OCI_PROJECT_NAME }}
           TF_VAR_environment: ${{ secrets.OCI_ENVIRONMENT }}
           TF_VAR_instance_count: ${{ secrets.OCI_INSTANCE_COUNT }}
-        run: terraform plan -out=tfplan
-
-      - name: Terraform Apply
-        working-directory: ${{ env.WORKING_DIR }}
-        env:
-          TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
-          TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
-          TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
-          TF_VAR_region: ${{ secrets.OCI_REGION }}
-          TF_VAR_compartment_id: ${{ secrets.OCI_COMPARTMENT_ID }}
-          TF_VAR_instance_image_id: ${{ secrets.OCI_INSTANCE_IMAGE_ID }}
-          TF_VAR_ssh_public_key: ${{ secrets.OCI_SSH_PUBLIC_KEY }}
-          TF_VAR_project_name: ${{ secrets.OCI_PROJECT_NAME }}
-          TF_VAR_environment: ${{ secrets.OCI_ENVIRONMENT }}
-          TF_VAR_instance_count: ${{ secrets.OCI_INSTANCE_COUNT }}
-        run: terraform apply -auto-approve tfplan
-
-      - name: Terraform Output
-        working-directory: ${{ env.WORKING_DIR }}
-        run: terraform output -json > outputs.json
-
-      - name: Upload Outputs
-        uses: actions/upload-artifact@v4
-        with:
-          name: terraform-outputs
-          path: terraform/outputs.json
+        run: terraform destroy -auto-approve
 
       - name: Notify Success
         if: success()
         run: |
-          echo "✅ Terraform Apply completed successfully!"
-          echo "📊 Check outputs artifact for resource details"
+          echo "🗑️ Terraform Destroy completed successfully!"
+          echo "All resources have been removed from OCI"
