Atualiza versão do Terraform de 1.9.8 para latest nos workflows e eleva requisito de versão mínima para 1.10.0 no backend OCI e main.tf

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # Execução manual apenas
 
 env:
-  TF_VERSION: '1.9.8'
+  TF_VERSION: 'latest'
   WORKING_DIR: './terraform'
 
 jobs:
