--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,7 +1,7 @@
 name: 'Terraform Apply'
 
 on:
-  workflow_dispatch:  # Execução manual apenas
+  workflow_dispatch:
 
 env:
   TF_VERSION: 'latest'
@@ -11,8 +11,8 @@ jobs:
   terraform-apply:
     name: 'Terraform Apply'
     runs-on: ubuntu-latest
-    environment: production
-    
+    environment: dev
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
