--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,18 +1,21 @@
-name: 'Terraform Destroy'
+name: 'Terraform Plan'
 
 on:
-  workflow_dispatch:  # Execução manual apenas
+  push:
+    branches: [main]
+    paths:
+      - 'terraform/**'
+  workflow_dispatch:
 
 env:
   TF_VERSION: 'latest'
   WORKING_DIR: './terraform'
 
 jobs:
-  terraform-destroy:
-    name: 'Terraform Destroy'
+  terraform-plan:
+    name: 'Terraform Plan'
     runs-on: ubuntu-latest
-    environment: dev  # Requer aprovação manual
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,7 +47,11 @@ jobs:
         working-directory: ${{ env.WORKING_DIR }}
         run: terraform init
 
-      - name: Terraform Destroy
+      - name: Terraform Validate
+        working-directory: ${{ env.WORKING_DIR }}
+        run: terraform validate
+
+      - name: Terraform Plan
         working-directory: ${{ env.WORKING_DIR }}
         env:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
@@ -53,10 +60,8 @@ jobs:
           TF_VAR_region: ${{ secrets.OCI_REGION }}
           TF_VAR_compartment_id: ${{ secrets.OCI_COMPARTMENT_ID }}
           TF_VAR_ssh_public_key: ${{ secrets.OCI_SSH_PUBLIC_KEY }}
-        run: terraform destroy -var-file=envs/dev.tfvars -auto-approve
+        run: terraform plan -var-file=envs/dev.tfvars
 
       - name: Notify Success
         if: success()
-        run: |
-          echo "🗑️ Terraform Destroy completed successfully!"
-          echo "All resources have been removed from OCI"
+        run: echo "✅ Terraform Plan completed successfully! Review the plan and run Apply manually."
